     is called, regardless of if an actual DBAPI
     level rollback occurred.  This event
     is specifically designed to allow operations
     with the Session to proceed after a rollback
     when the Session.is_active is True.
     [ticket:2241]

  - Fixed previously untested function which regressed
    in 0.7, can now make a synonym() of a synonym()
    again.

  - Identity map .discard() uses dict.pop(,None) 
    internally instead of "del" to avoid KeyError/warning 
    during a non-determinate gc teardown [ticket:2267]

  - Fixed regression in new composite rewrite where
    deferred=True option failed due to missing
    import [ticket:2253]

  - Fixed bug in query.join() which would occur
    in a complex multiple-overlapping path scenario,
    where the same table could be joined to
    twice.  Thanks *much* to Dave Vitek 
    for the excellent fix here.  [ticket:2247]

  - Query will convert an OFFSET of zero when
    slicing into None, so that needless OFFSET
    clauses are not invoked.

  - Repaired edge case where mapper would fail
    to fully update internal state when a relationship
    on a new mapper would establish a backref on the
    first mapper.

  - Fixed bug whereby if __eq__() was
    redefined, a relationship many-to-one lazyload
    would hit the __eq__() and fail.  [ticket:2260]
    Does not apply to 0.6.9.

  - Calling class_mapper() and passing in an object
    that is not a "type" (i.e. a class that could 
    potentially be mapped) now raises an informative
    ArgumentError, rather than UnmappedClassError.
    [ticket:2196]

  - New event hook, MapperEvents.after_configured().  
    Called after a configure() step has completed and
    mappers were in fact affected.   Theoretically this
    event is called once per application, unless new mappings
    are constructed after existing ones have been used
    already.

  - New declarative features:
        - __declare_last__() method, establishes an event