@@ -355,6 +355,10 @@ class SynonymProperty(DescriptorProperty):
     def _proxied_property(self):
         return getattr(self.parent.class_, self.name).property
 
+    @property
+    def _synonym_resolved_property(self):
+        return self._proxied_property
+
     def _comparator_factory(self, mapper):
         prop = self._proxied_property
 
